Deployments/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mydeployment
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      name: deployment1
  template:
    metadata:
      name: uideployment
      labels:
        name: deployment1
    spec:
      serviceAccountName: my-sa
      containers:
      - name: angularcontanier
        image: bhasmeht/angular-image:1.1.9 # {"$imagepolicy": "flux-system:mypolicy"}
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
        - mountPath: /tmp/data
          name: my-path
      volumes:
      - name: my-path
        persistentVolumeClaim:
          claimName: "my-pvc"
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mydeploymenttest
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      name: deployment
  template:
    metadata:
      name: testdeployment
      labels:
        name: deployment
    spec:
      containers:
      - name: testdeployment
        image: nginx
        ports:
        - containerPort: 80
        imagePullPolicy: Always
