Deployments/testpod.yml
kind: Pod 
apiVersion: v1 
metadata: 
   name: testpod 
spec: 
   containers: 
      - name: nginx 
        image: nginx
        ports:
          - containerPort: 80
        volumeMounts: 
           - name: myvol
             mountPath: /temp/data
   volumes:
    - name: myvol 
      persistentVolumeClaim: 
         claimName: my-pvc
