Deployments/service.yml
---
apiVersion: v1
kind: Service
metadata:
     name: myangularservice
spec:
   selector:
       name: deployment1
   ports:
     - protocol: "TCP"
       port: 80
       targetPort: 80 
   type: NodePort


---
apiVersion: v1
kind: Service
metadata:
     name: mytestservice
spec:
   selector:
       name: deployment
   ports:
     - protocol: "TCP"
       port: 80
       targetPort: 80
   type: NodePort
