Deployments/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    ingressclass.kubernetes.io/ingress.class: alb 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb
  rules:
  - host: mehta.bhaskarmehta.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myangularservice
            port:
              number: 80 
  - host: testmehta.bhaskarmehta.in
    http:  
       paths:          
       - path: /
         pathType: Prefix
         backend:
          service:
            name: mytestservice
            port:
              number: 80
